--- a/voms-deployment.yaml
+++ b/voms-deployment.yaml
@@ -39,6 +39,8 @@ spec:
            mountPath: "/etc/grid-security/hostcert.pem"
            subPath: hostcert.pem
            readOnly: true
+         - name: certs
+           mountPath: /etc/grid-security/certificates
          - name: voms-certs
            mountPath: "/etc/grid-security/hostkey.pem"
            subPath: hostkey.pem
@@ -48,6 +50,10 @@ spec:
           #- /etc/start.sh
           #- /etc/do-nothing.sh
       volumes:
+        - name: certs
+          hostPath:
+            path: /export-fetchcrl-el7
+            type: ""
         - name: voms-certs
           secret:
             secretName: voms-secrets
