--- a/test/voms-configmap-test.yaml
+++ b/test/voms-configmap-test.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: voms-frontend
+  name: voms-frontend-test
   namespace: voms
 data:
   startscript: |
     #!/bin/bash
 
     # This seems like it shouldn't be necessary but can't find a better way
-    sed -i 's/host=.*/host=voms.hep.pnnl.gov/' /etc/voms-admin/voms-admin-server.properties
+    sed -i 's/host=.*/host=voms-test.hep.pnnl.gov/' /etc/voms-admin/voms-admin-server.properties
 
     echo "#" >> /etc/voms-admin/voms-admin-server.properties
     echo "tls_exclude_cipher_suites=TLS_ECDHE_ECDSA_WITH_3DES_EDE_CBC_SHA,TLS_ECDHE_RSA_WITH_3DES_EDE_CBC_SHA,SSL_RSA_WITH_3DES_EDE_CBC_SHA,TLS_ECDH_ECDSA_WITH_3DES_EDE_CBC_SHA,TLS_ECDH_RSA_WITH_3DES_EDE_CBC_SHA,SSL_DHE_RSA_WITH_3DES_EDE_CBC_SHA,SSL_DHE_DSS_WITH_3DES_EDE_CBC_SHA,TLS_DHE_RSA_WITH_AES_128_CBC_SHA,TLS_DHE_RSA_WITH_AES_256_CBC_SHA,TLS_DHE_RSA_WITH_AES_256_GCM_SHA384,TLS_DHE_DSS_WITH_AES_256_GCM_SHA384,TLS_DHE_RSA_WITH_AES_128_GCM_SHA256,TLS_DHE_DSS_WITH_AES_128_GCM_SHA256,TLS_DHE_RSA_WITH_AES_256_CBC_SHA256,TLS_DHE_RSA_WITH_AES_128_CBC_SHA256" >> /etc/voms-admin/voms-admin-server.properties
@@ -24,7 +24,7 @@ data:
 
     voms-configure install \
     --vo=project8 \
-    --hostname=voms.hep.pnnl.gov \
+    --hostname=voms-test.hep.pnnl.gov \
     --skip-database \
     --dbtype=mysql \
     --dbname=voms_project8 \
@@ -34,7 +34,7 @@ data:
     --dbport=3306 \
     --dbauser=root \
     --dbapwd=$MYSQL_ROOT_PASSWORD \
-    --core-port=15030 \
+    --core-port=15010 \
     --smtp-host=emailgw02.pnnl.gov \
     --mail-from='david.cowley@pnnl.gov'
 
